WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
Bug 12244
FCKeditor: Find dialog doesn't work
https://bugs.webkit.org/show_bug.cgi?id=12244
Summary
FCKeditor: Find dialog doesn't work
webkit
Reported
2007-01-13 02:58:43 PST
When hitting the find button in the find dialog, a JavaScript error is thrown and nothing happens.
Attachments
Add attachment
proposed patch, testcase, etc.
David Kilzer (:ddkilzer)
Comment 1
2007-01-13 03:48:58 PST
Confirmed. Tested with locally-built debug build of WebKit
r18824
. JavaScript console message: Value undefined (result of expression oEditor.FCK.EditorWindow.find) is not object.
http://www.fckeditor.net/nightly/fckeditor/editor/dialog/fck_find.html
Line: 136
David Kilzer (:ddkilzer)
Comment 2
2007-01-13 03:54:21 PST
Steps to reproduce: 1. Open URL:
http://www.fckeditor.net/nightly/browsers_test.html
2. Click Find icon. 3. Type "using". 4. Hit Enter or click Find button.
Justin Garcia
Comment 3
2007-03-08 16:47:08 PST
r20071
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug